@@ -28,11 +28,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
 
-import eu.solven.adhoc.data.column.ISliceToValue;
+import eu.solven.adhoc.data.column.ICuboid;
 import eu.solven.adhoc.engine.step.CubeQueryStep;
 import eu.solven.adhoc.engine.step.ISliceWithStep;
 import eu.solven.adhoc.filter.editor.IFilterEditor;
@@ -44,7 +45,7 @@ import eu.solven.adhoc.query.filter.ISliceFilter;
 import eu.solven.adhoc.query.filter.value.IValueMatcher;
 import eu.solven.adhoc.query.filter.value.NotMatcher;
 import eu.solven.adhoc.query.filter.value.OrMatcher;
-import eu.solven.pepper.mappath.MapPathGet;
+import eu.solven.adhoc.util.AdhocMapPathGet;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NonNull;
@@ -75,23 +76,23 @@ public class CumulatingDecomposition extends DuplicatingDecomposition implements
 		super(options);
 		this.options = ImmutableMap.copyOf(options);
 
-		filterEditor = MapPathGet.getRequiredAs(options, K_FILTER_EDITOR);
+		filterEditor = AdhocMapPathGet.getRequiredAs(options, K_FILTER_EDITOR);
 	}
 
 	@Override
-	public IDecomposition makeWithSlices(List<? extends ISliceToValue> underlyings) {
+	public IDecomposition makeWithSlices(List<? extends ICuboid> underlyings) {
 		// This will evaluate the relevant cumulated columns given the underlying slices
 
-		Map<String, ?> columnToCoordinates = MapPathGet.getRequiredAs(options, K_COLUMN_TO_COORDINATES);
+		Map<String, ?> columnToCoordinates = AdhocMapPathGet.getRequiredAs(options, K_COLUMN_TO_COORDINATES);
 		Set<String> columns = columnToCoordinates.keySet();
 
 		Map<String, List<Object>> columnToCoordinatesFromUnderlyings = new LinkedHashMap<>();
 		columns.forEach(column -> columnToCoordinatesFromUnderlyings.put(column, new ArrayList<>()));
 
-		underlyings.forEach(sliceToValue -> {
-			Set<String> relevantColumns = ImmutableSet.copyOf(Sets.intersection(columns, sliceToValue.getColumns()));
+		underlyings.forEach(cuboid -> {
+			Set<String> relevantColumns = ImmutableSet.copyOf(Sets.intersection(columns, cuboid.getColumns()));
 
-			sliceToValue.slices().forEach(slice -> {
+			cuboid.slices().forEach(slice -> {
 				relevantColumns.forEach(column -> {
 					columnToCoordinatesFromUnderlyings.computeIfAbsent(column, k -> new ArrayList<>())
 							.add(slice.getGroupBy(column));
@@ -109,7 +110,7 @@ public class CumulatingDecomposition extends DuplicatingDecomposition implements
 	@Override
 	public List<IWhereGroupByQuery> getUnderlyingSteps(CubeQueryStep step) {
 		ISliceFilter editedFilter = filterEditor.editFilter(step.getFilter());
-		return List.of(MeasurelessQuery.edit(step).filter(editedFilter).build());
+		return ImmutableList.of(MeasurelessQuery.edit(step).filter(editedFilter).build());
 	}
 
 	@Override
@@ -146,6 +147,6 @@ public class CumulatingDecomposition extends DuplicatingDecomposition implements
 	@Override
 	public Map<String, Class<?>> getColumnTypes() {
 		// No generated columns, as cumulated columns are pre-existing
-		return Map.of();
+		return ImmutableMap.of();
 	}
 }
