@@ -29,11 +29,8 @@ import java.util.Map;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.google.common.collect.ImmutableSet;
 
-import eu.solven.adhoc.engine.AdhocFactories;
-import eu.solven.adhoc.engine.step.CubeQueryStep;
 import eu.solven.adhoc.measure.sum.SumCombination;
 import eu.solven.adhoc.measure.transformator.ICombinator;
-import eu.solven.adhoc.measure.transformator.step.ITransformatorQueryStep;
 import eu.solven.adhoc.query.filter.ISliceFilter;
 import lombok.Builder;
 import lombok.NonNull;
@@ -86,11 +83,11 @@ public class RatioByCombinator implements ICombinator {
 	@JsonIgnore
 	@Override
 	public List<String> getUnderlyingNames() {
-		return Collections.singletonList(underlying);
+		return List.of(underlying);
 	}
 
 	@Override
-	public ITransformatorQueryStep wrapNode(AdhocFactories factories, CubeQueryStep step) {
-		return new RatioByCombinatorQueryStep(this, factories, step);
+	public String queryStepClass() {
+		return RatioByCombinatorQueryStep.class.getName();
 	}
 }
